# -Agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  agent.py  evaluation.py  knowledge.py  tickets.py  tools.py
backend/app/db/: __init__.py  dependencies.py  session.py
backend/app/models/: __init__.py  admin.py  feedback.py  order.py  policy.py  product.py  shipment.py  ticket.py  user.py
backend/app/schemas/: __init__.py  admin.py  agent.py  evaluation.py  feedback.py  knowledge.py  tickets.py  tools.py
backend/app/services/: admin_auth.py  admin_policies.py  agent_workflow.py  evaluation.py  evaluation_jobs.py  feedback.py  knowledge_documents.py  llm_client.py  policy_knowledge.py  tickets.py  tool_errors.py  tools.py
backend/kefu_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: __init__.py  ingest_knowledge.py  init_db.py  run_eval.py  seed_admin.py  seed_db.py
backend/tests/: conftest.py  test_admin_auth.py  test_admin_policies.py  test_agent_feedback.py  test_agent_workflow.py  test_dashboard_read_api.py  test_database.py  test_evaluation.py  test_health.py  test_llm_client.py  test_policy_knowledge.py  test_tools_api.py
backend/tests/_generated/: eval_report_admin_rules.json  eval_report_history_latest.md  eval_report_llm_compare.json  eval_report_rules_compare.json  eval_report_rules_only.json  eval_report_test.json  eval_report_test.md  latest_eval_report_test.json  legacy_eval_report.json
docs/: architecture.md  (+1 more)
(+43 files in other folders)
